--- a/Lab22/app/src/main/res/layout/activity_my.xml
+++ b/Lab22/app/src/main/res/layout/activity_my.xml
@@ -6,7 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MyActivity">
+    tools:context=".MyActivity"
+    android:background="#ff02f8ff">
 
     <ListView
         android:id="@+id/list"
@@ -34,6 +35,17 @@
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Agregar"
+        android:id="@+id/Agregar"
+        android:layout_above="@+id/list"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_toRightOf="@+id/textView"
+        android:onClick="agregarComida" />
 
 
 </RelativeLayout>
