--- a/Lab22/app/src/main/res/layout/activity_agregar_comida.xml
+++ b/Lab22/app/src/main/res/layout/activity_agregar_comida.xml
@@ -7,17 +7,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.gustavovargas.lab2.AgregarComida"
-    android:background="#ff02f8ff">
+    android:background="#5702f8ff">
 
     <TextView
-        android:text="Agregar nuevo producto"
+        android:text="@string/agNuevProd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30dp"
         android:id="@+id/textView2" />
 
     <EditText
-        android:id="@+id/nombre"
+        android:id="@+id/inpNombre"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
@@ -26,10 +26,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="40dp"
-        android:text="Nombre" />
+        android:text="@string/nombre" />
 
     <EditText
-        android:id="@+id/descripcion"
+        android:id="@+id/inpDescripcion"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
@@ -37,10 +37,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="100dp"
-        android:text="Descripción" />
+        android:text="@string/descripcion" />
 
     <EditText
-        android:id="@+id/pais"
+        android:id="@+id/inpPais"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
@@ -48,18 +48,19 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="160dp"
-        android:text="País" />
+        android:text="@string/pais" />
 
     <Button
         android:id="@+id/buttonLoadPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:text="Load Picture"
+        android:text="@string/cargarImagen"
         android:layout_gravity="center"
-        android:layout_below="@+id/pais"
+        android:layout_below="@+id/inpPais"
         android:layout_toRightOf="@+id/agregar"
-        android:layout_toEndOf="@+id/agregar"></Button>
+        android:layout_toEndOf="@+id/agregar"
+        android:onClick="onClick"></Button>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -69,7 +70,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Agregar"
+        android:text="@string/agregar"
         android:id="@+id/agregar"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -79,7 +80,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancelar"
+        android:text="@string/cancelar"
         android:id="@+id/cancelar"
         android:layout_alignTop="@+id/agregar"
         android:layout_alignRight="@+id/textView2"
@@ -89,7 +90,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imagen"
+        android:id="@+id/imgProducto"
         android:src="@drawable/ic_launcher"
         android:layout_above="@+id/agregar"
         android:layout_alignLeft="@+id/buttonLoadPicture"
