--- a/Lab22/app/src/main/res/layout/activity_my.xml
+++ b/Lab22/app/src/main/res/layout/activity_my.xml
@@ -7,45 +7,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MyActivity"
-    android:background="#ff02f8ff">
+    android:background="#5702f8ff">
 
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="fill_parent"
+    <ImageButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="0dp"
+        android:id="@+id/imageButton"
+        android:src="@drawable/ic_launcher"
+        android:onClick="ingresar"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView" />
-
-    <TextView
-        android:text="Comidas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="60dp"
-        android:textColorLink="#ff3eff29"
-        android:paddingEnd="20dp"
-        android:paddingStart="20dp"
-        android:password="false"
-        android:phoneNumber="false"
-        android:paddingLeft="10dp"
-        android:textColor="#ffff9500"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Agregar"
-        android:id="@+id/Agregar"
-        android:layout_above="@+id/list"
-        android:layout_toEndOf="@+id/textView"
-        android:layout_toRightOf="@+id/textView"
-        android:onClick="agregarComida" />
-
-
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
