--- a/Lab22/app/src/main/res/layout/fooditem.xml
+++ b/Lab22/app/src/main/res/layout/fooditem.xml
@@ -4,28 +4,33 @@
     android:layout_height="wrap_content" >
     <com.parse.ParseImageView
         android:id="@+id/icon"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_launcher"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#ff3d3d3d"
-        android:textSize="32sp"
+        android:textSize="20sp"
+        android:text="Tipo"
+        android:layout_alignBottom="@+id/icon"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="false"
-        android:layout_marginTop="160dp" />
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="32sp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false"
-        android:layout_marginTop="190dp" />
+        android:text="Nombre"
+        android:layout_toStartOf="@+id/type"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/icon"
+        android:layout_toEndOf="@+id/icon" />
 
     !</RelativeLayout>
