--- a/Lab22/app/src/main/res/menu/ver_productos.xml
+++ b/Lab22/app/src/main/res/menu/ver_productos.xml
@@ -1,11 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.gustavovargas.lab2.AgregarComida" >
+    tools:context="com.example.gustavovargas.lab2.VerProductos" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
-
-
-
 </menu>
