--- a/Lab22/app/src/main/res/layout/activity_ver_productos.xml
+++ b/Lab22/app/src/main/res/layout/activity_ver_productos.xml
@@ -39,18 +39,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Agregar"
-        android:id="@+id/Agregar"
-        android:layout_toEndOf="@+id/textView"
-        android:onClick="agregarComida"
-        android:layout_above="@+id/list"
-        android:layout_alignRight="@+id/list"
-        android:layout_alignEnd="@+id/list" />
-
     <SearchView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -58,8 +46,16 @@
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/Agregar"
-        android:layout_alignEnd="@+id/Agregar" />
+        android:layout_alignRight="@+id/list" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:layout_above="@+id/list"
+        android:layout_alignRight="@+id/searchView2"
+        android:layout_alignEnd="@+id/searchView2"
+        android:src="@drawable/ic_launcher" />
 
 
 </RelativeLayout>
