--- a/Lab22/app/src/main/res/layout/activity_my.xml
+++ b/Lab22/app/src/main/res/layout/activity_my.xml
@@ -21,17 +21,17 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <ImageButton
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="ingresar2"
-        android:src="@drawable/ic_launcher"
         android:layout_below="@+id/imageButton"
         android:layout_marginTop="70dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:text="TWITTER" />
 
 
 </RelativeLayout>
