--- a/Lab22/app/src/main/res/layout/activity_ver_productos.xml
+++ b/Lab22/app/src/main/res/layout/activity_ver_productos.xml
@@ -47,16 +47,16 @@
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/list" />
 
-    <ImageButton
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
-        android:src="@drawable/com_facebook_tooltip_black_topnub"
         android:onClick="agregarComida"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_above="@+id/searchViewComida" />
+        android:layout_above="@+id/searchViewComida"
+        android:text="+" />
 
     <Button
         android:layout_width="wrap_content"
@@ -75,7 +75,8 @@
         android:id="@+id/lbl_nombre"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_toEndOf="@+id/textView"
+        android:textSize="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -85,7 +86,8 @@
         android:id="@+id/lbl_id"
         android:layout_below="@+id/lbl_nombre"
         android:layout_alignLeft="@+id/lbl_nombre"
-        android:layout_alignStart="@+id/lbl_nombre" />
+        android:layout_alignStart="@+id/lbl_nombre"
+        android:textSize="10dp" />
 
 
 </RelativeLayout>
